--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,31 @@
     <style name="Theme.AsteroidRadarArch.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.AsteroidRadarArch.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="BaseTextView">
+        <item name="android:textColor">@color/default_text_color</item>
+    </style>
+
+    <style name="ImageOfTheDayTitle" parent="BaseTextView">
+        <item name="android:padding">@dimen/dimen_16_dp</item>
+        <item name="android:textSize">@dimen/dimen_20_sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/background_image_of_the_day_text</item>
+    </style>
+
+    <style name="ItemTitle" parent="BaseTextView">
+        <item name="android:textSize">@dimen/dimen_18_sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ItemSubTitle" parent="BaseTextView">
+        <item name="android:textSize">@dimen/dimen_16_sp</item>
+    </style>
+
+    <style name="ItemList">
+        <item name="android:paddingStart">@dimen/dimen_16_dp</item>
+        <item name="android:paddingTop">@dimen/dimen_16_dp</item>
+        <item name="android:paddingBottom">@dimen/dimen_16_dp</item>
+    </style>
+
 </resources>
