--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/MainFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/MainFragment"
         android:name="com.udacity.asteroid.radar.main.MainFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/fragment_main"
         tools:layout="@layout/fragment_main">
-
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_show_detail"
+            app:destination="@id/DetailFragment" />
     </fragment>
+
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/DetailFragment"
         android:name="com.udacity.asteroid.radar.detail.DetailFragment"
-        android:label="@string/second_fragment_label"
+        android:label="@string/fragment_detail"
         tools:layout="@layout/fragment_detail">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+        <argument
+            android:name="asteroidModel"
+            app:argType="com.udacity.asteroid.radar.domain.model.AsteroidModel" />
     </fragment>
 </navigation>
