feat: Add detail fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,6 +23,6 @@
 
         <argument
             android:name="asteroidModel"
-            app:argType="com.udacity.asteroid.radar.domain.model.AsteroidModel" />
+            app:argType="com.udacity.asteroid.domain.model.AsteroidModel" />
     </fragment>
 </navigation>
