--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,12 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.udacity.asteroid.radar.MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/show_week_asteroids"
+        android:title="@string/next_week_asteroids" />
+    <item
+        android:id="@+id/show_today_asteroids"
+        android:title="@string/today_asteroids" />
+    <item
+        android:id="@+id/show_saved_asteroids"
+        android:title="@string/saved_asteroids" />
 </menu>
